
* Feature: Windows seems to access the files on Samba drives starting at the last 64K segment
           simply when the file is opened. Setting --win_smb_fix=1 will ignore these attempts (not decode the
           file up to this point).
* Feature: Add "Auto Stream Copy"
* Feature: Speed up DVD/Bluray/VCD access drastically. FUSE calls getattr like crazy, using cached data now.
* Feature:
* Bugfix: Decimal seconds in duration was wrong. Fixed.
* Bugfix: This was a bad one: The application crashed with a protection fault if there was not enough disk space 
        on the cache drive. This is now properly reported and transcoding aborted. Thanks for Muf for reporting
	the issue.
* Bugfix: Fix crash when DVD nav packet is missing
* Bugfix: 
* Fix deprecation:

Important changes in 1.6 (2019-01-11)

* Feature: Made all parameters like --profile case insensitive.
* Feature: Added Apple MOV, Apple Prores and Apple AIFF formats.
* Feature: Enable "Smart Transcoding": To enable, specify --desttype=AUDIO+VIDEO, e.g.
           --desttype=MOV+AIFF will automatically convert video files to MOV and audio
           to AIFF.
* Feature: New parameter --level allows selecting a profile for Prores: proxy, lt, standard
           or hq.
* Feature: Add MOV target format
* Feature: Add AIFF target format
* Feature: Smart conversion option ("Smart Transcode")
* Feature: Add level option for Prores
* Feature: Add Apple Prores support
* Feature: Do not "upgrade" mono audio to stereo. Create mono audio stream.
* Feature: Speed up DVD conversion significantly by using IFO data instead of probing each chapter.
* Feature: Add DVD angle support.Chapters with angles will show as separate files.
* Feature: Speed up Bluray conversion significantly by using the directory instead of probing each chapter.
* Feature: Speed up VCD conversion.
* Feature: EXPERIMENTAL: Windows seems to access the files on Samba drives starting at the last 64K segment 